# LitTextWork

./: .gitignore  .~lock.frenchPOSwithExample.csv#  .~lock.italianPos.csv#  2017-03-02-Note-19-30.xoj  2017-03-03-Note-14-14.xoj  LitTextAll.code-workspace  callingCoreNLPwithWget  chars2map  corefXML.txt  frenchPOSwithExample.csv  italianPos.csv  italianPosWIthExample.csv  italianPosWIthExample.txt  litTextLeksah16.2.2.1.lkshs  littestLeksah.lkshs  stack model for project.yaml  stack.yaml  withMain.code-workspace  withMainAndHttpStringsFileio.code-workspace
CmdLineUtilities/: CmdLineUtilities.cabal  stack.yaml
CmdLineUtilities/CmdLineUtilities/: CmdLineNtmake.hs  ProcessFlags.hs  UtilsParseArgs.hs  UtilsProcessCmd.hs  UtilsProcessing.hs
CmdLineUtilities/LitText/CmdLineUtilities/: UtilsParseArgs.hs  UtilsProcessCmd.hs  UtilsProcessing.hs
CmdLineUtilities/tests/: TestMain.hs
LinesToParagraphBA_C/: lines2para.cabal  lines2paraLeksah.lkshs  stack.yaml  stack.yaml.old
LinesToParagraphBA_C/.HTF/: TestAuto.history
LinesToParagraphBA_C/Lines2para/: HandleLayout.hs  LayoutResults.res  Lines2ignore.hs  Lines2ignoreTestResults.res  Lines2para.hs  Lines2paraTestResults.res  Lines2paraTests.hs
LinesToParagraphBA_C/src/: TestMain.hs
LitFoundation/: LICENSE  litFoundation.cabal  stack.yaml
LitFoundation/BuchCode/: BuchToken.hs  Classes4text.hs
LitFoundation/LitText/Foundation/: Flags.hs  TextDescriptor.hs
LitFoundation/LitTypes/: Flags.hs  LanguageTypedText.hs  ServerNames.hs  TextDescriptor.hs  UtilsParseArgs.hs  UtilsProcessing.hs
LitFoundation/Parser/: Foundation.hs  LanguageTypedText.hs  TextDescriptor.hs
LitFoundation/Process/: UtilsParseArgs.hs  UtilsProcessing.hs
LitFoundation/Producer/: Servers.hs
LitFoundation/src/: TestMain.hs
LitFoundation/tests/: TestMain.hs
LitFoundation/tests/LitTypes/: LanguageTypedText_test.hs  ServerNames_test.hs  TextDescriptor_test.hs  UtilsParseArgs_test.hs  UtilsProcessing_test.hs
LitFoundation/tests/Parser/: LanguageTypedText_test.hs  TextDescriptor_test.hs
LitText/: LitText.cabal  LitTextLeksah.lkshs  resfile0  resfileN  stack.yaml  stack.yaml-extensible  stack.yaml.2  stack.yaml.old
LitText/.HTF/: nlpTestAuto.history
LitText/BuchCode/: BuchToken.hs  MarkupText.hs
LitText/CoreNLP/: CoreNLPxml.hs  Defs0.hs  NERcodes.hs  POScodes.hs  POScodesConll.hs  POScodesFrench.hs  POScodesGerman.hs  POScodesSpanish.hs  POScodesTinT.hs  POScodesUD.hs
LitText/Lines2para/: HandleLayout.hs  Lines2ignore.hs  Lines2para.hs  Lines2text.hs  MarkupText.hs
LitText/Parser/: CompleteSentence.hs  ConvertTaggerOutput.hs  FilterTextForNLP.hs  FormNLPsnips.hs  Foundation.hs  Main2subTest.hs  NLPvocabulary.hs  ProduceDocCallNLP.hs  ProduceLayout.hs  ProduceLit.hs  ProduceLit.res  ProduceNLP.hs  ProduceNLP.res  ProduceNLPtriples (copy).hs  ProduceNLPtriples.hs  ProduceNLPtriples.res  ReadMarkupAB.hs
LitText/Processor/: CheckServers.hs  Main2sub.hs  NTmake.hs  ProcessAll.hs
LitText/oldPOS/: POScodesFrench.hs  POScodesTinT.hs  POScodesUD.hs
LitText/oldPOSetc/: BuchToken.hs  NLPvocabulary.hs  POScodesFrenchUD (copy).hs  POScodesFrenchUD.hs  POScodesGerman.hs  POScodesSpanish.hs  ProduceLayout.hs  ProduceNLPtriples.hs
LitText/src/: Main2sub.hs  MainCollect.hs  MainCollectAll.hs  MainCollectTest.hs  MainLit.hs  MainLoadWordnet.hs  MainParse.hs  MainProduction.hs  TestLitText.hs  ntallmake.hs  ntmake.hs  ntmake4.hs  ntmake5.hs  ntmakeMain.hs
LitText/tests/: TestLitText.hs
MainLitText/: MainLitText.cabal  stack.yaml  workspaceMainLit.code-workspace
MainLitText/Data/: RDFext.hs
MainLitText/Data/RDFext/: Codes.hs  (+3 more)
MainLitText/Lines2para/: MarkupText.hs
MainLitText/LitText/: CmdLineUtilities.hs  CoreNLP.hs  Foundation.hs  Lines.hs  NLP2RDF.hs  Parser.hs  Process.hs  Processor.hs
MainLitText/Parser/: ProduceLayout.hs
MainLitText/src/: TestMain.hs  construct.hs  ntmakeMain.hs  query.hs  store.hs
MainLitText/tests/: RDFextTestMain.hs  TestLitText.hs  TestMain.hs
NLPservices/: NLPservices.cabal  short1.json  short1.pretty  short1.txt  short1ud.txt  stack (another copy).yaml  stack.yaml  triples.nt.tmp
NLPservices/CoreNLP/: Conllu2doc1.hs  CoreNLP.hs  CoreNLPxml.hs  Defs0.hs  Doc1_absoluteID.hs  Doc2ToDoc0.hs  Doc2ToDoc1.hs  Doc2ToLinear.hs  Doc2ToRDF_JSON.hs  DocBase.hs  DocNLP_0or1.hs  Linear2Triple.hs  Models.hs  NERcodes.hs  ParseJsonCoreNLP.hs  ProduceNLPtriples.hs  ProduceNLPtriples2.hs  Vocabulary.hs
NLPservices/NLP2RDF/: CompleteSentence.hs  ConvertTaggerOutput.hs  LanguageSpecific.hs  NLPvocabulary.hs  ProduceDocCallNLP.hs
NLPservices/Parser/: CompleteSentence.hs  LanguageSpecific.hs  NLPvocabulary.hs  ProduceDocCallNLP.hs  ProduceLit.hs  ProduceNLPtriples.hs  oldProduceNLP.hs
NLPservices/old_CoreNLP/: CoreNLPxml.hs  Defs0.hs  Doc2ToDoc1.hs  NLPvocabulary.hs  ProduceNLPtriples.hs  ProduceNLPtriples2.hs  ProduceNLPtriples2_test.hs  ProduceNLPtriplesCommon.hs
NLPservices/src/: NLPmainTest1.hs  ProduceDocCallNLP.hs  TestNLP.hs
NLPservices/tests/: TestNLP.hs
buchCode/: buchCode.cabal  buchcodeLeksah.lkshs  stack.yaml  stack.yaml.old
buchCode/.HTF/: TestAuto.history
buchCode/BuchCode/: BuchToken.hs  MarkupText.hs  MarkupText.res
buchCode/src/: TestMain.hs
coreNLP/: coreNLP.cabal  stack.leksah.yaml  stack.yaml  stack.yaml.old
coreNLP/CoreNLP/: CoreNLPxml.hs  DEPcodes.hs  Defs0.hs  DependencyCodes.hs  NERcodes.hs  POScodes.hs  ReadDoc0.hs  Snippets2nt.hs
coreNLP/src/: TestCoreNLP.hs
old/LitFoundation/: litFoundation.cabal  stack.yaml
rdf4hextension/: rdf4hextension.cabal  stack.yaml  stack.yaml.2  stack.yaml.old
rdf4hextension/Data/: Extension.hs  RDFext.hs
rdf4hextension/src/: TestMain.hs
rdf4hextension/tests/: TestMain.hs
rdf4store/: rdf4store.cabal  stack.yaml.2  stack.yaml.old
rdf4store/Store/: Fuseki.hs  StoreAlg.hs  oldVirtuoso.hs
rdf4store/src/: MainFourStore.hs  MainFuseki.hs  MainVirtuoso.hs
storeInJena/: README.md  storeInJena.cabal
storeInJena/Process/: DeleteOneGraph.hs  OneConstruct.hs  OneQuery.hs  StoreOneFile.hs
storeInJena/src/: construct.hs  store.hs  update.hs
(+246 files in other folders)
