name: CmdLineUtilities
version: 0.1.0.10

cabal-version: >=1.24
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: handling user interface stuff - cmd line oriented
description:
     handle cmd line stuff
     process all files utility

author: Andrew U. Frank

library
    build-depends:
        base
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , uniform-algebras
        , network-uri
        , uniform-http
--        , uniform-convenience
        -- not yet required, should replace rdf4hextension for PartURI
        -- , rdf4hextension
--        , HTF
        , optparse-applicative
        , pipes
        , rdf4hextension
        , path-io
        , litFoundation
        -- import all what is lower, to avoid duplications

    exposed-modules:
        CmdLineUtilities.UtilsParseArgs
        CmdLineUtilities.UtilsProcessing
        CmdLineUtilities.UtilsProcessCmd
--        CmdLineUtilities.CmdLineNtmake
--        CmdLineUtilities.ProcessFlags

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .

--Test-Suite  TestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    TestMain.hs
--    build-depends: base
--        , HTF
--        , uniform-strings
--        , uniform-fileio
--        , uniform-error
--        , uniform-convenience
----        , litFoundation
----        , rdf4hextension
--        , uniform-http
--        , path
--    hs-source-dirs: tests
--    default-language: Haskell2010
--    other-modules:
--        CmdLineUtilities.UtilsParseArgs_test
--        CmdLineUtilities.UtilsProcessing_test

