name: lines2para
version: 0.0.4.3
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: the code for the representation of the buch
description:
     the definitions

author: Andrew U. Frank

library
    build-depends:
        base
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , uniform-algebras
        , buchCode
        , litFoundation
        , split
        , HTF

    exposed-modules:
        Lines2para.Lines2para
        Lines2para.Lines2ignore
        Lines2para.HandleLayout
--        Lines2para.Lines2paraTests  -- should not been used, test in specific modules
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .

Test-Suite  TestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , litFoundation
        , lines2para
        , buchCode
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules:
