name: litFoundation
version: 0.1.8.6

cabal-version: >=1.24
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: the code for reading the files
description:
     the file read

author: Andrew U. Frank

library
    build-depends:
        base
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , uniform-algebras
        , network-uri
        , uniform-http
        , optparse-applicative
        , pipes
        , rdf4hextension

    exposed-modules:
        LitTypes.TextDescriptor
        LitTypes.LanguageTypedText
        LitTypes.ServerNames
        LitTypes.Flags
        BuchCode.BuchToken
        BuchCode.Classes4text

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .

Test-Suite  TestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-error
        , uniform-convenience
        , litFoundation
        , uniform-http
        , pipes
    hs-source-dirs: tests
    default-language: Haskell2010
    other-modules:
        LitTypes.TextDescriptor_test
        LitTypes.LanguageTypedText_test
        LitTypes.ServerNames_test
        BuchCode.BuchToken_test
