name: LitText
version: 0.0.4.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
synopsis: convert literary text to RDF
description:
    main driver for the conversion of literary texts to rdf/semantic web format
    0.0.4 layout is separately converted to RDF
library
    build-depends:
       base -any
        , uniform-strings >=0.0.10.5
        , uniform-fileio >=0.0.14
        , uniform-convenience >=0.0.9.24
        , uniform-error >=0.0.10
        , uniform-algebras >=0.0.9
        , uniform-http >=0.0.2
        , litFoundation
--        , readMarkup
        , split
        , rdf4hextension
        , rdf4h
 --       , rdf4store
        , text
--        , buchCode
--        , lines2para
--        , coreNLP
        , chatter
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , split
        , regex-compat

    exposed-modules:
        -- in order of inclusion
        Parser.ProduceLit
        Parser.ProduceLayout
        Parser.ProduceNLP
        Parser.FilterTextForNLP
        Parser.FormNLPsnips
        Parser.ProduceDocCallNLP
        Parser.ProduceNLPtriples
        Parser.ConvertTaggerOutput
        Parser.CompleteSentence
        Parser.NLPvocabulary
        Parser.ReadMarkupAB
        Processor.ProcessAll
        Processor.CheckServers
--        Parser.Main2subTest
        Lines2para.Lines2para
        Lines2para.Lines2ignore
        Lines2para.HandleLayout
        CoreNLP.Defs0
        CoreNLP.CoreNLPxml
        CoreNLP.POScodes
        CoreNLP.NERcodes
        CoreNLP.DEPcodes
        BuchCode.BuchToken
        BuchCode.MarkupText
        Processor.Main2sub

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .,src

Test-Suite nlpTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestLitText.hs
    build-depends: base
        , HTF
        , uniform-strings >=0.0.10.2
        , uniform-fileio >=0.0.13
        , uniform-convenience >=0.0.9.12
        , uniform-error >=0.0.10
        , litFoundation
        , LitText
    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub


executable nt2make
    main-is: ntmake.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , LitText
        , litFoundation
        , optparse-applicative

    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub

executable ntmake4
    main-is: ntmake4.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , LitText
        , pipes
        , rdf4hextension
        , litFoundation
        , optparse-applicative

    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub
