name: LitText
version: 0.0.4.3
 -- changed 0.0.4.1 -> 2 changed language for wordform to 3 letters (same as lemma3)
--        - new make is ntmake5,
-- 0.0.4.2 added the coreNLP POS data
    -- 0.0.4.3 moved all tag data to chatter

cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
synopsis: convert literary text to RDF
description:
    main driver for the conversion of literary texts to rdf/semantic web format
    0.0.4 layout is separately converted to RDF
library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , litFoundation
--        , storeInJena
--        , readMarkup
        , split
        , rdf4hextension
        , rdf4h
 --       , rdf4store
        , text
--        , buchCode
--        , lines2para
--        , coreNLP
        , cereal
        , chatter == 0.9.2.0
            -- is support for POS codes (could use haskell-conll)
                -- used in  POS module
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , split
        , regex-compat

    exposed-modules:
        -- in order of inclusion
        Parser.ProduceLit
        Parser.ProduceLayout
        Parser.ProduceNLP
        Parser.FilterTextForNLP
        Parser.FormNLPsnips
        Parser.ProduceDocCallNLP
        Parser.ProduceNLPtriples
        Parser.ConvertTaggerOutput
        Parser.CompleteSentence
        Parser.NLPvocabulary
        Parser.ReadMarkupAB
        Processor.ProcessAll
        Processor.CheckServers
--        Parser.Main2subTest
        Lines2para.Lines2para
        Lines2para.Lines2ignore
        Lines2para.HandleLayout
        CoreNLP.Defs0
        CoreNLP.CoreNLPxml
--        CoreNLP.POScodesConll
--        CoreNLP.POScodesUD
--        CoreNLP.POScodesTinT
--        CoreNLP.POScodesGerman
--        CoreNLP.POScodesSpanish
--        CoreNLP.POScodesFrench
--        CoreNLP.POScodesFrenchUD
            -- italian
--        CoreNLP.NERcodes
--        CoreNLP.DEPcodes
        BuchCode.BuchToken
        BuchCode.MarkupText
        Processor.Main2sub
--        Process.UtilsProcessing

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .,src

Test-Suite nlpTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestLitText.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , litFoundation
        , LitText
    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub


--executable nt2make
--    main-is: ntmake.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-fileio
--        , uniform-convenience
--        , LitText
--        , litFoundation
--        , optparse-applicative
--
--    default-language: Haskell2010
--    hs-source-dirs: src
----    other-modules: Main2sub

executable ntmake5
    main-is: ntmake5.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
--        , storeInJena
        , LitText
        , pipes
        , rdf4hextension
        , litFoundation
        , optparse-applicative
        , optparse-generic
        , directory

    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub
