name: LitText
version: 0.0.4.5
 -- changed 0.0.4.1 -> 2 changed language for wordform to 3 letters (same as lemma3)
--        - new make is ntmake5,
-- 0.0.4.2 added the coreNLP POS data
-- 0.0.4.3 moved all tag data to chatter


cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
synopsis: convert literary text to RDF
description:
    main driver for the conversion of literary texts to rdf/semantic web format
    0.0.4 layout is separately converted to RDF
    0.0.4.5 test in tests, source in src
library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , litFoundation >=0.1.8.3
        , split
        , rdf4hextension
        , rdf4h
        , text
        , NLPservices >=0.0.4.7
            -- is support for POS codes (could use haskell-conll)
                -- used in  POS module
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , split
        , regex-compat

    exposed-modules:
        -- in order of inclusion
        Parser.ProduceLit
        Parser.ProduceLayout
        Parser.ProduceNLP
        Parser.FilterTextForNLP
        Parser.FormNLPsnips
        Parser.ReadMarkupAB
        Processor.ProcessAll
        Processor.CheckServers
        Lines2para.Lines2para
        Lines2para.Lines2text
        Lines2para.HandleLayout
        Lines2para.MarkupText
        Processor.Main2sub
--        Process.UtilsProcessing

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .

Test-Suite LitTextTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestLitText.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , litFoundation
        , LitText
        , NLPservices
        , rdf4hextension
        , path
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Parser.ProduceLit_test
        Parser.ProduceLayout_test
        Parser.ProduceNLP_test
        Parser.FilterTextForNLP_test
        Parser.FormNLPsnips_test
        Parser.ReadMarkupAB_test
        Lines2para.Lines2para_test
        Lines2para.Lines2text_test
        Lines2para.HandleLayout_test
        Lines2para.MarkupText_test



executable ntmake5
    main-is: ntmake5.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
--        , storeInJena
        , LitText
        , pipes
        , rdf4hextension
        , litFoundation
        , optparse-applicative
        , optparse-generic
        , directory
        , NLPservices

    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub
