name:                MainLitText
version:             0.0.2
synopsis:            the mains for LitText processing
description:         store, query and update rdf in ntriple format in jena
homepage:            https://github.com/githubuser/LitTextWork#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew U. Frank
maintainer:          frank@geoinfo.tuwien.ac.at
copyright:           2017 andrew u frank
category:            Data
build-type:          Simple
cabal-version:       >=1.20
extra-source-files:  README.md

library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , split
        , rdf4h
        , text
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , split
        , zlib
        , regex-compat
        , optparse-applicative
        , optparse-generic
        , containers

    exposed-modules:
        LitText.Foundation
        LitText.Lines
        LitText.Parser.ProduceLit
        LitText.Parser.ProduceLayout
        LitText.Parser.ProduceNLP
        LitText.Parser.FilterTextForNLP
        LitText.Parser.FormNLPsnips
        LitText.Parser.ReadMarkupAB
        LitText.Processor.ProcessAll
--        Processor.CheckServers  -- delete file?
        LitText.Processor.Main2sub
        LitText.Processor.NTmake
        Data.RDFext
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:
        LitText.Foundation.TextDescriptor
        LitText.Foundation.BuchToken
        Data.RDFext.FileTypes
         Data.RDFext.Predicates
         Data.RDFext.Prefs
         Data.RDFext.Triple2text
         LitText.Foundation.Flags
         LitText.Foundation.LanguageTypedText
         LitText.Foundation.ServerNames
        LitText.Lines.Lines2para
        LitText.Lines.Lines2text
        LitText.Lines.HandleLayout
        LitText.Lines.MarkupText

executable store6
-- store all nt.gz files in fuseki expand in haskell
-- because fuseki cannot unzip multi-session and pass as multipart to fuseki server
  hs-source-dirs:      src
  main-is:             store.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
--        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-http
        , text
        , MainLitText
--        , optparse-applicative
--        , litFoundation
--        , StoreInJena
--        , pipes
--        , CmdLineUtilities
--        , LitText
  hs-source-dirs: src, .
  other-modules:
--
--
--executable query6
--  hs-source-dirs:      src
--  main-is:             query.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--        , HTF
--        , uniform-strings
--        , uniform-fileio
--        , uniform-convenience
--        , uniform-error
--        , uniform-http
--        , text
--        , pipes
--        , litFoundation
--        , StoreInJena
--  other-modules:
--
--
executable construct6
  hs-source-dirs:      src
  main-is:             construct.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-http
        , text
        , MainLitText
--        , pipes
--        , litFoundation
--        , StoreInJena
--        , CmdLineUtilities
--        , LitText
  hs-source-dirs: src, .
  other-modules:

executable ntmake6
    main-is: ntmakeMain.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
--        , StoreInJena
--        , LitText
--        , pipes
--        , rdf4hextension
--        , litFoundation
        , directory
        , MainLitText
--        , NLPservices
--        , CmdLineUtilities

    default-language: Haskell2010
    hs-source-dirs: src, .
--    other-modules: Main2sub


