name:                MainLitText
version:             0.0.2
synopsis:            the mains for LitText processing
description:         store, query and update rdf in ntriple format in jena
homepage:            https://github.com/githubuser/LitTextWork#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew U. Frank
maintainer:          frank@geoinfo.tuwien.ac.at
copyright:           2017 andrew u frank
category:            Data
build-type:          Simple
cabal-version:       >=1.20
extra-source-files:  README.md

library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , split
        , MissingH
        , rdf4h
        , text
        , bytestring
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , megaparsec
        , aeson
        , split
        , zlib
        , regex-compat
        , optparse-applicative
        , optparse-generic
        , containers
        , unordered-containers
        , TreeTagSets
        , Hs-conllu

    exposed-modules:
        LitText.Foundation
        LitText.Lines
        LitText.CoreNLP
        LitText.NLP2RDF
        LitText.CmdLineUtilities
--        LitText.Process
        LitText.Process
        LitText.Parser
        Data.RDFext
        Data.RDFext.Codes
        Data.RDFext.FileTypes
        Data.RDFext.Predicates
        Data.RDFext.Prefs
        Data.RDFext.Triple2text
--        LitText.Foundation.ListForms
-- for testing
        LitText.CoreNLP.CoreNLP
        LitText.NLP2RDF.NLP2RDF
        LitText.Parser.Parser
        LitText.Lines.Lines


    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:
        LitText.Lines.Lines2para
        LitText.Lines.Lines2text
        LitText.Lines.HandleLayout
        LitText.Lines.MarkupText
        LitText.CoreNLP.Conllu2doc1
        LitText.CoreNLP.Doc1_absoluteID
        LitText.CoreNLP.Doc2ToLinear
        LitText.CoreNLP.DocBase
        LitText.CoreNLP.DocNLP_0or1
        LitText.CoreNLP.Linear2Triple
        LitText.CoreNLP.Vocabulary
        LitText.CoreNLP.ParseJsonCoreNLP
        LitText.NLP2RDF.LanguageSpecific
        LitText.NLP2RDF.ProduceDocCallNLP
        LitText.CmdLineUtilities.UtilsParseArgs
        LitText.CmdLineUtilities.UtilsParseArgs
        LitText.CmdLineUtilities.UtilsProcessCmd
        LitText.CmdLineUtilities.UtilsProcessing
        LitText.Foundation.BuchToken
        LitText.Foundation.Classes4text
        LitText.Foundation.Flags
        LitText.Foundation.LanguageTypedText
        LitText.Foundation.ServerNames
        LitText.Foundation.TextDescriptor
        LitText.Process.OneConstruct
        LitText.Process.StoreOneFile
        LitText.Foundation.Classes4text
        LitText.Parser.ProduceLit
        LitText.Parser.ProduceLayout
        LitText.Parser.ProduceNLP
        LitText.Parser.FilterTextForNLP
        LitText.Parser.FormNLPsnips
        LitText.Parser.ReadMarkupAB
        LitText.Process.ProcessAll
--        Process.CheckServers  -- delete file?
        LitText.Process.Main2sub
        LitText.Process.NTmake

executable store6
-- store all nt.gz files in fuseki expand in haskell
-- because fuseki cannot unzip multi-session and pass as multipart to fuseki server
  hs-source-dirs:      src
  main-is:             store.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
--        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-http
        , text
        , MainLitText
--        , optparse-applicative
--        , litFoundation
--        , StoreInJena
--        , pipes
--        , CmdLineUtilities
--        , LitText
  hs-source-dirs: src
  other-modules:
--
--
--executable query6
--  hs-source-dirs:      src
--  main-is:             query.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--        , HTF
--        , uniform-strings
--        , uniform-fileio
--        , uniform-convenience
--        , uniform-error
--        , uniform-http
--        , text
--        , pipes
--        , litFoundation
--        , StoreInJena
--  other-modules:
--
--
executable construct6
  hs-source-dirs:      src
  main-is:             construct.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-http
        , text
        , MainLitText
--        , pipes
--        , litFoundation
--        , StoreInJena
--        , CmdLineUtilities
--        , LitText
  hs-source-dirs: src
  other-modules:

executable ntmake6
    main-is: ntmakeMain.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
--        , StoreInJena
--        , LitText
--        , pipes
--        , rdf4hextension
--        , litFoundation
        , directory
        , MainLitText
--        , NLPservices
--        , CmdLineUtilities

    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub

Test-Suite MainLitTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base, HTF
        , uniform-strings
        , test-invariant
        , quickcheck-text
        , text, bytestring
        , network-uri
        , snap-core
        , uniform-algebras
        , uniform-convenience
        , uniform-fileio
        , MainLitText
             -- for test corenlp -- perhaps not required
        , TreeTagSets
        , aeson
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        LitText.CoreNLP.Doc1_absoluteID_test
        LitText.CoreNLP.Doc2ToLinear_test
        LitText.CoreNLP.DocBase_test
        LitText.CoreNLP.DocNLP_0or1_test
        LitText.CoreNLP.Linear2Triple_test
        LitText.CoreNLP.ParseJsonCoreNLP_test
        LitText.CoreNLP.Vocabulary_test

       LitText.NLP2RDF.ProduceDocCallNLP_test
       LitText.NLP2RDF.ProduceNLPtriples_test

        LitText.Parser.ReadMarkupAB_test
        LitText.Lines.MarkupText_test
        LitText.Lines.HandleLayout_test
        LitText.Lines.Lines2text_test
        LitText.Lines.Lines2para_test
        LitText.Parser.ProduceLayout_test
        LitText.Parser.ProduceLit_test
        LitText.Parser.FilterTextForNLP_test
        LitText.Parser.FormNLPsnips_test
        LitText.Parser.ProduceNLP_test
