name: NLPservices
version: 0.0.4.4


cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
synopsis: convert text in a single language to RDF
description:
        break the nlpservices away from the LitText (0.0.4.3 -> 0.0.4.4)

library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , litFoundation
--        , storeInJena
--        , readMarkup
        , split
        , rdf4hextension
        , rdf4h
 --       , rdf4store
        , text
--        , buchCode
--        , lines2para
--        , coreNLP
--        , cereal
--        , chatter ==0.9.2.0
        , TreeTagSets
            -- is support for POS codes (could use haskell-conll)
                -- used in  POS module
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , split
        , regex-compat

    exposed-modules:
        -- in order of inclusion
        ProduceDocCallNLP
        CoreNLP.Defs0
        CoreNLP.CoreNLPxml
        Parser.CompleteSentence
        Parser.ProduceNLP
        Parser.ProduceNLPtriples
        Parser.ConvertTaggerOutput
--        CoreNLP.POScodesConll
--        CoreNLP.POScodesUD
--        CoreNLP.POScodesTinT
--        CoreNLP.POScodesGerman
--        CoreNLP.POScodesSpanish
--        CoreNLP.POScodesFrench
--        CoreNLP.POScodesFrenchUD
            -- italian
        CoreNLP.NERcodes
        CoreNLP.DEPcodes

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .,src

Test-Suite nlpTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestLitText.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , litFoundation
    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub


--executable nt2make
--    main-is: ntmake.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-fileio
--        , uniform-convenience
--        , LitText
--        , litFoundation
--        , optparse-applicative
--
--    default-language: Haskell2010
--    hs-source-dirs: src
----    other-modules: Main2sub

executable ntmake5
    main-is: ntmake5.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
--        , storeInJena
        , pipes
        , rdf4hextension
        , litFoundation
        , optparse-applicative
        , optparse-generic
        , directory

    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules: Main2sub
