name: NLPservices
version: 0.0.5.4


cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
synopsis: convert text in a single language to RDF as a service
description:
        break the nlpservices away from the LitText (0.0.4.3 -> 0.0.4.4)
        0.0.5.0 - change depTags to property - change to nlp_2017
        0.0.5.2 - all code in src, test separated
        0.0.5.4 -- removed coref code - not achieved from XML output

library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , litFoundation >=0.1.8.3
        , split
        , rdf4hextension
        , rdf4h
        , text
            -- is support for POS codes (could use haskell-conll)
                -- used in  POS module
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , split
        , regex-compat
        , aeson
        , unordered-containers
        , containers
        , TreeTagSets
        , litFoundation

    exposed-modules:
        -- in order of inclusion
        Parser.ProduceDocCallNLP
        CoreNLP.Defs0
        CoreNLP.CoreNLPxml
        Parser.CompleteSentence
        Parser.LanguageSpecific
        Parser.ProduceNLPtriples
        Parser.ConvertTaggerOutput
        Parser.NLPvocabulary
        CoreNLP.Models
         CoreNLP.ParseJsonCoreNLP
         CoreNLP.Doc2ToDoc0
         CoreNLP.ProduceNLPtriples2

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: ., src

Test-Suite nlpTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestNLP.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , litFoundation
        , NLPservices
        , TreeTagSets >=0.0.2.6.7
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Parser.ProduceDocCallNLP_test
--        CoreNLP.Models_test
--        CoreNLP.Defs0_test
--        CoreNLP.CoreNLPxml_test
         CoreNLP.ParseJsonCoreNLP_test
         CoreNLP.Doc2ToDoc0_test
         CoreNLP.ProduceNLPtriples2_test
        Parser.CompleteSentence_test
        Parser.ProduceNLPtriples_test
        Parser.ConvertTaggerOutput_test
        Parser.NLPvocabulary_test



