name: NLPservices
version: 0.0.5.4


cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
synopsis: convert text in a single language to RDF as a service
description:
        break the nlpservices away from the LitText (0.0.4.3 -> 0.0.4.4)
        0.0.5.0 - change depTags to property - change to nlp_2017
        0.0.5.2 - all code in src, test separated
        0.0.5.4 -- removed coref code - not achieved from XML output

library
    build-depends:
       base -any
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , uniform-algebras
        , uniform-http
        , litFoundation
        , split
        , rdf4hextension
--        , rdf4h
        , text
            -- is support for POS codes (could use haskell-conll)
                -- used in  POS module
        , HTF
        , safe
        , pipes
        , hxt
        , parsec
        , parsec-extra
        , split
        , regex-compat
        , aeson
        , unordered-containers
        , containers
        , TreeTagSets
        , litFoundation
        , bytestring

    exposed-modules:
        -- in order of inclusion
        NLP2RDF.ProduceDocCallNLP
        CoreNLP.Defs0
        CoreNLP.CoreNLPxml
        NLP2RDF.CompleteSentence
        NLP2RDF.LanguageSpecific
        CoreNLP.ProduceNLPtriples
        NLP2RDF.ConvertTaggerOutput
        NLP2RDF.NLPvocabulary
--        CoreNLP.Models
         CoreNLP.ParseJsonCoreNLP
         CoreNLP.Doc2ToDoc1
         CoreNLP.ProduceNLPtriples2

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: ., src

Test-Suite nlpTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestNLP.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error
        , litFoundation
        , NLPservices
        , TreeTagSets
        , rdf4hextension
        , NLPservices
        , aeson
        , utf8-string
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        NLP2RDF.ProduceDocCallNLP_test
--        CoreNLP.Models_test
--        CoreNLP.Defs0_test
--        CoreNLP.CoreNLPxml_test
         CoreNLP.ParseJsonCoreNLP_test
         CoreNLP.Doc2ToDoc1_test
         CoreNLP.ProduceNLPtriples2_test
        NLP2RDF.CompleteSentence_test
        NLP2RDF.ProduceNLPtriples_test
        NLP2RDF.ConvertTaggerOutput_test
        NLP2RDF.NLPvocabulary_test

executable NLPmainTest1
-- necessary to run the test to produce triples, which uses all memory
    main-is:    NLPmainTest1.hs
    build-depends: base, HTF
        , NLPservices
        , uniform-strings
        , uniform-convenience
            , uniform-fileio
--        , safe
--        -- , test-framework  -- clash with HTF
--        , test-invariant
--        , text
--        , snap-core
--        , network-uri
--        , bytestring
--        , quickcheck-text
        , TreeTagSets
        , litFoundation
        , rdf4hextension
        , NLPservices
        , aeson
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:


