name: buchCode
version: 0.1.7.7
cabal-version: >=1.24
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: the code for the representation of the buch
description:
     the definitions

author: Andrew U. Frank

library
    build-depends:
        base
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , rdf4hextension
        , parsec
        , parsec-extra
        , split
        , HTF

    exposed-modules:
        BuchCode.BuchToken
        BuchCode.MarkupText
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .

Test-Suite  TestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base
        , HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , buchCode
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules:
