name: coreNLP
version: 0.1.6.1
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: dealing with the stanford corenlp
description:
     making calls, parsing the result in pack into triples

author: Andrew U. Frank

library
    build-depends:
        base, HTF
        , uniform-strings
        , uniform-error
        , uniform-algebras
        , uniform-convenience
        , uniform-fileio
        , rdf4hextension
        , chatter
        , rdf4h
        , hxt
 --       , rdf4store
        , text
        , monads-tf
        , transformers
        , bytestring
--        , HTTP
--        , network-uri
        , hxt-unicode
        , uniform-http


    exposed-modules:
        CoreNLP.Defs0
        CoreNLP.CoreNLPxml
        CoreNLP.DependencyCodes
--        LitMain.HttpCall
        -- CoreNLP.ReadDoc0
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .

-- Test-Suite CoreNLPTestAuto
--     type:       exitcode-stdio-1.0
--     main-is:    TestCoreNLP.hs
--     build-depends: base
--         , HTF
--         , uniform-strings
--         , uniform-fileio
--         , uniform-convenience
--         , coreNLP
--  --       , rdf4store
--     default-language: Haskell2010
--     hs-source-dirs: src
--     other-modules:
