name: rdf4hextension
version: 0.0.9.2
cabal-version: >=1.24
build-type: Simple
license: BSD3
license-file: LICENSE.txt
synopsis: Extensions to the  library for RDF processing in Haskell
description:
    'RDF for Haskell' is a library for working with RDF in Haskell.
    0.0.7 + 8  for RDF used in litText
category: RDF
author: andrew frank

library
    exposed-modules:
        Data.RDF.Extension
        Data.RDF.Prefs
        Data.RDF.FileTypes
        Data.RDF.Predicates
        Data.RDF.Triple2text
    build-depends:
        base
        ,containers
        ,uniform-strings
        ,uniform-error
        ,uniform-fileio
        ,uniform-algebras
        ,uniform-http
        ,uniform-convenience
        ,rdf4h >=3.0.1.1
--        ,network-uri
        ,text
        -- directory
        -- not used, only for version
        -- safe -any
    hs-source-dirs: .
    default-language: Haskell2010
    other-modules:
